feat(core, ci, crawler): add crawler module and refactor deployment & common code
This commit introduces a new web crawler module and includes a major refactoring of the CI/CD deployment pipeline and existing common code for better maintainability and functionality.

- Feature
    - Add the new `cheng-crawler` module, establishing a foundational framework for web crawling with components like `CrawlerHandler` and `SeleniumUtil`.
    - Integrate the crawler module into the main `cheng-admin` application.

- CI/CD
    - Heavily refactor the GitHub Actions workflow (`ci-cd.yml`) by extracting backend and frontend deployment logic from inline commands into dedicated shell scripts (`deploy-backend.sh`, `deploy-to-server.sh`).
    - Enhance deployment scripts to be configurable via environment variables, making them more flexible and CI-friendly.
    - Template the Nginx configuration (`proxy-ssl-corrected.conf`) with variables like `${DEPLOY_HOST}` for reusability.
    - Improve `known_hosts` management by prioritizing the `SSH_KNOWN_HOSTS` secret before falling back to `ssh-keyscan`.
    - Update `build-frontend.sh` to prefer `npm ci` in CI environments for improved stability.
    - Add generated deployment artifacts and logs to `.gitignore`.

- Refactor & Chore
    - Refactor the `inv_scan_log` feature, simplifying its domain object and mapper interface to focus solely on logging.
    - Adopt Lombok (`@Getter`) across the `cheng-common` module (e.g., `BaseException`, `FileUploadUtils`) to reduce boilerplate code.
    - Perform general code cleanup and simplification in utility classes like `FileUtils`, `SqlUtil`, and `Seq`.
    - Standardize `URLEncoder.encode` calls to use the `StandardCharsets.UTF_8` constant.

- i18n & Fix
    - Correct and unify terminology in comments and UI text from Simplified Chinese to Traditional Chinese terms.
    - Standardize the scanning API endpoint, changing it from `/inventory/item/scan` to `/inventory/scan/submit`.